[package]
name = "rrdns"
version = "0.1.0"
authors = ["lafolle"]
edition = "2018"
homepage = "https://github.com/lafolle/rrdns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[alias]
b = "build"
c = "check"
t = "test"
r = "run"
rr = "run --release"

[dependencies]
slice_as_array = { version = "1.1.0", default-features = false }
itertools = { version = "0.9.0" }
rand = "0.7.3"
tokio = { version = "0.2.22", features = ["full"] }
md5 = "0.7.0"
async-recursion = "0.3.1"
log = "0.4.0"
env_logger = "0.7.1"
clap = "2.33.2"
prometheus = "0.9.0"
lazy_static = "1.4.0"
hyper = "0.13.7"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
